---------------------------------- MOTD --------------------------------------
        Thanks to Bungle from Footsmells for the original code <8-) 
          Also Athanasius and Grimace for further work done since.
------------------------------------------------------------------------------
    Any problems/comments contact Admin on:-   summink@somewhere
------------------------------------------------------------------------------