@@ -1,6 +1,11 @@
 ---------------------------------- MOTD --------------------------------------
+     Due to the failure to negotiate prison rental with Snowplains we have
+      been forced to construct our own at a cost of 12,000,000,000 drogna. 
+         This cost will be recouped from Snowplains through increased 
+                    import duties over the next 14 years.
+------------------------------------------------------------------------------
         Thanks to Bungle from Footsmells for the original code <8-) 
-          Also Athanasius and Grimace for further work done since.
+       Also Sheep, CSGas and Polar Bear for further work done since.
 ------------------------------------------------------------------------------
     Any problems/comments contact Admin on:-   summink@somewhere
 ------------------------------------------------------------------------------
